# cloud_services_and_infra_2025

./: .gitignore  certificates.md
.github/workflows/: build_auth_docker.yaml  build_backend_docker.yaml  build_nginx_docker.yaml  build_processor_docker.yaml
session_1/: docker-compose-with-traefik-and-certs.yml  docker-compose-with-traefik.yml  readme.md
session_2/: docker-compose.yml  readme.md
session_3/: readme.md
session_3/ui/: package.json
session_4/: docker-compose.yml  readme.md
session_4/auth/src/: index.ts  jwt.ts  user.dto.ts
session_4/auth/src/models/: userModel.ts
session_4/auth/src/routes/: loginRouter.ts  protectedRouter.ts  signupRouter.ts
session_4/backend/src/: index.ts
session_4/backend/src/routes/: protectedRouter.ts
session_5/: readme.md  screenshot_recommendation_result.md
session_5/nginx/: Dockerfile  init-prod.sh
session_5/processor/: .env.example  pyproject.toml
session_5/processor/app/: config.py  main.py
session_5/processor/data/: books.json
session_5/ui/: Dockerfile
session_5/ui/src/: App.css
session_6/: build_production_images.sh  docker-compose-prod.yml  docker-compose.yml  readme.md
session_6/processor/: production.Dockerfile
session_7/: readme.md
session_7/backend/: production.Dockerfile
session_7/secrets/: prometheus_users  traefik_users
session_7/stacks/: my-stack.yml  traefik-stack.yml
session_8/: readme.md
session_8/auth/: package.json  production_simple.Dockerfile
session_8/auth/src/: index.ts
session_8/processor/: Dockerfile
session_8/stacks/: monitor-stack.yml  my-stack.yml
(+6 files in other folders)
